# dig-download — the node-side multi-source download orchestrator for the DIG Node peer network.
#
# dig-download answers "get me this content, fast and verified": given a `ContentId` (store / root /
# capsule / resource), it (1) LOCATES the peers holding it via dig-dht `find_providers`, (2) confirms
# them + plans ranges via the L7 `dig.getAvailability`, (3) fans DIFFERENT byte ranges across
# DIFFERENT providers SIMULTANEOUSLY over dig-nat mux streams (`dig.fetchRange`), (4) VERIFIES each
# range independently against the capsule's chain-anchored merkle root, (5) RETRIES a bad/dropped
# range from another provider, and (6) REASSEMBLES the verified bytes in order into the node's store —
# with pause + resume that never refetches an already-verified range. This is the node engine that
# supersedes the retired browser-side `dig-download-utility`.
#
# Dependency philosophy (mirrors dig-dht / dig-nat): keep the tree SMALL and the network INJECTABLE.
# The orchestrator is written entirely against trait boundaries — `ProviderLocator` (locate holders),
# `RangeTransport` (fetch a range from a holder), `Sink` (write into the store), `StateStore` (persist
# resume progress), and `Verifier`/`ProofVerifier` (per-range + chain-anchored integrity) — so the
# whole scheduler / rebalance / verify / pause-resume machinery is tested over an IN-MEMORY harness
# (mock DHT + mock range sources + in-memory sink + in-memory state store, NO real network / mainnet).
# The real impls (`DhtProviderLocator` over dig-dht, `NatRangeTransport` over dig-nat) are thin
# adapters over those two crates; the store-backed `Sink` + digstore merkle `ProofVerifier` are wired
# by dig-node (see the implementers' note in the crate docs).
[package]
name = "dig-download"
version = "0.5.0"
edition = "2021"
rust-version = "1.75.0"
license = "Apache-2.0 OR MIT"
description = "Multi-source download orchestrator for the DIG Node peer network — locates content holders via dig-dht, fans byte ranges across multiple peers simultaneously over dig-nat (dig.fetchRange), verifies each range independently against the capsule's chain-anchored merkle root, rebalances around dropped/slow/bad sources, and reassembles into the node's store with pause + resume that never refetches a verified range."
repository = "https://github.com/DIG-Network/dig-download"
readme = "README.md"
keywords = ["download", "multisource", "p2p", "content", "dig"]
categories = ["network-programming"]

[dependencies]
# LOCATE — "which peers hold this content?" dig-download derives a `ContentId` (store / root /
# capsule / resource) and asks dig-dht `find_providers` for the holders' `ProviderRecord`s.
#
# Sourcing: dig-dht resolves from crates.io (>= 0.4.0). dig-dht 0.4.0 keeps the SAME `find_providers`
# public API this crate consumes (`DhtService::find_providers` — the true distributed iterative
# lookup), adding auth-aware ingest/retract + `holders_of` for the flywheel provider store; those are
# additive and not consumed here, so `DhtProviderLocator` keeps working unchanged. dig-dht 0.4 stays on
# dig-nat ^0.8 (same major/minor as the direct dep below), so the tree still carries exactly ONE dig-nat
# instance. dig-dht defines its OWN `PeerId`/`ProviderRecord` types (NOT re-exported from dig-nat).
# NC-7: prefer the crates.io release over bare-git.
dig-dht = "0.4"

# REACH + FETCH — the mTLS peer transport the range fetch rides: `dig.getAvailability` +
# `dig.fetchRange` over dig-nat mux streams, plus the wire shapes (`RangeRequest`, `RangeFrame`,
# `AvailabilityItem`/`Answer`/`Response`) and `PeerId`/`PeerTarget`/`NodeCert`/`connect`.
#
# Sourcing: the plain crates.io release "0.8" (§5.2 STUN happy-eyeballs reflexive discovery, added
# additively over 0.7; all 0.7 API — `connect`/`connect_with_runtime`/`NatRuntime` — is unchanged).
# dig-nat 0.8 consumes `dig-tls` for ALL cert/mTLS/peer_id/BLS-binding plumbing. dig-dht (above) is
# now ALSO on dig-nat 0.8, so the final tree carries exactly ONE dig-nat instance — this bump is
# additive-but-breaking-for-consumers of dig-download's own public API (single dig-nat + dig-dht
# version in the tree). NC-7: prefer the crates.io release over bare-git.
dig-nat = "0.8"

# Async runtime for the orchestrator task + the concurrent range fan-out + backoff timers.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "io-util"] }
async-trait = "0.1"

# The concurrent range scheduler drives many in-flight (provider, range) fetches at once with a
# `FuturesUnordered`, topping up as sources finish/drop.
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Resume state (`StateStore`) + the file-backed store persist per-range progress as JSON so an
# interrupted (or paused) download resumes from the exact verified-range set.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Content integrity: `resource_leaf = SHA-256(concatenated chunk ciphertexts)` (L7 §9 / digstore
# merkle-proofs) — the whole-resource commitment a reassembled resource is verified against.
sha2 = "0.10"

# Structured errors + observability.
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
# The in-memory harness spins up mock providers + mock range sources + an in-memory sink/state store
# in one process (NO real network). test-util drives the backoff timers deterministically.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }

# Test-only: dig-nat's `NodeCert` (re-exported from dig-tls) is a private-field, CA-signed
# certificate with no public constructor besides `generate_signed`/`load_or_generate`/`from_pem`,
# which need a BLS identity `SecretKey`. dig-tls owns that type; not needed as a PRODUCTION
# dependency (dig-download's own code only ever holds/passes an `Arc<dig_nat::NodeCert>` it is
# handed, never mints one).
dig-tls = "0.1"

[profile.release]
overflow-checks = true
